security credentials added

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
-  ,"seed:carparks": "node ./scripts/seedCarParks.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "seed:carparks": "node ./scripts/seedCarParks.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "node-cron": "^4.2.1"
